--- a/index.html
+++ b/index.html
@@ -1,14 +1,521 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mindlabs Initiative Logo</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>WL new</title>
+  
+
 </head>
 <body>
-  <div class="logo-container">
-    <img src="mindlabs-logo-gradient.png" alt="Mindlabs Initiative Logo">
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+  <meta charset="UTF-8" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <title>Mindlabs Initiative</title>
+
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
+  <style>
+
+    body {
+
+      margin: 0;
+
+      font-family: 'Segoe UI', sans-serif;
+
+      background: linear-gradient(135deg, #0a0a23, #1b004d);
+
+      color: white;
+
+      overflow-x: hidden;
+
+      position: relative;
+
+    }
+
+    #particles-js {
+
+      position: absolute;
+
+      width: 100%;
+
+      height: 100%;
+
+      z-index: 0;
+
+    }
+
+    .container {
+
+      position: relative;
+
+      z-index: 1;
+
+      max-width: 900px;
+
+      margin: auto;
+
+      padding: 30px 20px;
+
+    }
+
+    .hero {
+
+      display: flex;
+
+      flex-wrap: wrap;
+
+      align-items: center;
+
+      justify-content: center;
+
+      text-align: left;
+
+      gap: 20px;
+
+    }
+
+    .hero img {
+
+      height: 320px;
+
+      max-width: 100%;
+
+    }
+
+    .hero-text h1 {
+
+      font-size: 40px;
+
+      font-weight: bold;
+
+      margin: 0;
+
+      line-height: 1.2;
+
+    }
+
+    .hero-text p {
+
+      font-size: 18px;
+
+      color: #ccccff;
+
+      margin: 5px 0 0;
+
+    }
+
+    h3 {
+
+      color: #00bfff;
+
+    }
+
+    section {
+
+      margin-top: 40px;
+
+    }
+
+    ul, ol {
+
+      padding-left: 20px;
+
+    }
+
+    .email-form {
+
+      margin-top: 20px;
+
+      display: flex;
+
+      justify-content: center;
+
+      gap: 10px;
+
+      flex-wrap: wrap;
+
+    }
+
+    input[type="email"], input[name="bot-field"] {
+
+      padding: 10px;
+
+      width: 280px;
+
+      border: none;
+
+      border-radius: 5px;
+
+      font-size: 16px;
+
+    }
+
+    button {
+
+      background: #4b64ff;
+
+      color: white;
+
+      border: none;
+
+      padding: 10px 20px;
+
+      font-size: 16px;
+
+      border-radius: 5px;
+
+      cursor: pointer;
+
+      transition: background 0.3s ease;
+
+    }
+
+    button:hover {
+
+      background: #3748c7;
+
+    }
+
+    #message, #user-ip {
+
+      margin-top: 20px;
+
+      font-weight: bold;
+
+      text-align: center;
+
+    }
+
+    input[name="bot-field"] {
+
+      display: none;
+
+    }
+
+  </style>
+
+</head>
+
+<body>
+
+  <div id="particles-js"></div>
+
+  <div class="container">
+
+    <div class="hero">
+
+      <img src="https://raw.githubusercontent.com/MindlabsInitiative/Mindlabs-site/main/mindlabs-logo-gradient.png" alt="Mindlabs Logo">
+
+      <div class="hero-text">
+
+        <h1>ENTER THE FUTURE<br>OF INTELLIGENCE</h1>
+
+        <p>Revolutionary NFT & Gaming Ecosystem</p>
+
+      </div>
+
+    </div>
+
+    <section>
+
+      <h3>📘 Project Overview</h3>
+
+      <p>Mindlabs Initiative is a revolutionary NFT and crypto project. Its main focus is to introduce NFT utility as the most valuable asset in the digital space. The platform integrates:</p>
+
+      <ul>
+
+        <li>Minting NFT</li>
+
+        <li>Gaming</li>
+
+        <li>Raffle</li>
+
+        <li>Token Economy</li>
+
+      </ul>
+
+      <p>Into one immersive metaverse experience.</p>
+
+    </section>
+
+    <section>
+
+      <h3>🎲 Gacha NFT Minting</h3>
+
+      <p>Our gacha-style NFT minting offers:</p>
+
+      <ul>
+
+        <li><strong>Universal Access:</strong> Anyone can mint NFTs.</li>
+
+        <li><strong>Affordable Entry:</strong> Low gas fees on Ethereum.</li>
+
+        <li><strong>Random Rewards:</strong> Surprise-based NFT drops.</li>
+
+        <li><strong>Fair Distribution:</strong> Equal chance for all participants.</li>
+
+      </ul>
+
+    </section>
+
+    <section>
+
+      <h3>🚀 Get Started Today</h3>
+
+      <p><strong>Join the Whitelist:</strong></p>
+
+      <ul>
+
+        <li>Priority access to minting</li>
+
+        <li>Exclusive benefits for early adopters</li>
+
+        <li>Early community member status</li>
+
+        <li>Launch and special event notifications</li>
+
+      </ul>
+
+      <p><strong>What's Next?</strong></p>
+
+      <ol>
+
+        <li>Launch & NFT Minting</li>
+
+        <li>Enter the Mindlabsverse</li>
+
+        <li>Receive $MIT Token</li>
+
+        <li>Community Growth</li>
+
+      </ol>
+
+    </section>
+
+    <section>
+
+      <h3>💡 Why Join Mindlabs Initiative?</h3>
+
+      <ul>
+
+        <li><strong>Innovation:</strong> Building the future of digital ownership</li>
+
+        <li><strong>Community:</strong> Every user is a stakeholder</li>
+
+        <li><strong>Affordable:</strong> Low costs and accessible pricing</li>
+
+        <li><strong>Sustainable:</strong> Long-term vision and continuous growth</li>
+
+      </ul>
+
+    </section>
+
+    <!-- Email Form -->
+
+    <section>
+
+      <div class="email-form">
+
+        <input type="email" id="email" placeholder="Enter your email">
+
+        <input type="text" name="bot-field" id="bot-field">
+
+        <button id="submitBtn">Submit</button>
+
+      </div>
+
+      <div id="message"></div>
+
+      <div id="user-ip"></div>
+
+    </section>
+
   </div>
+
+  <script>
+
+    const loadTime = Date.now();
+
+    let userIP = "";
+
+    fetch('https://ipapi.co/json/')
+
+      .then(res => res.json())
+
+      .then(data => {
+
+        userIP = data.ip;
+
+        document.getElementById("user-ip").innerText =
+
+          `Your IP: ${data.ip} (${data.city}, ${data.country_name})`;
+
+      });
+
+    particlesJS("particles-js", {
+
+      particles: {
+
+        number: { value: 60, density: { enable: true, value_area: 800 } },
+
+        color: { value: "#ffffff" },
+
+        shape: { type: "circle" },
+
+        opacity: { value: 0.3 },
+
+        size: { value: 3 },
+
+        line_linked: {
+
+          enable: true,
+
+          distance: 150,
+
+          color: "#8888ff",
+
+          opacity: 0.2,
+
+          width: 1
+
+        },
+
+        move: { enable: true, speed: 2 }
+
+      },
+
+      interactivity: {
+
+        detect_on: "canvas",
+
+        events: {
+
+          onhover: { enable: true, mode: "repulse" },
+
+          onclick: { enable: true, mode: "push" }
+
+        },
+
+        modes: {
+
+          repulse: { distance: 100 },
+
+          push: { particles_nb: 4 }
+
+        }
+
+      },
+
+      retina_detect: true
+
+    });
+
+    const formBtn = document.getElementById("submitBtn");
+
+    const emailInput = document.getElementById("email");
+
+    const message = document.getElementById("message");
+
+    const botField = document.getElementById("bot-field");
+
+    formBtn.addEventListener("click", () => {
+
+      const email = emailInput.value.trim();
+
+      if (botField.value !== "") {
+
+        message.textContent = "🚫 Bot detected.";
+
+        message.style.color = "#ff4444";
+
+        return;
+
+      }
+
+      if (Date.now() - loadTime < 1500) {
+
+        message.textContent = "⚠️ Too fast.";
+
+        message.style.color = "#ffaa00";
+
+        return;
+
+      }
+
+      if (email === "" || !email.includes("@") || !email.includes(".")) {
+
+        message.textContent = "❌ Invalid email.";
+
+        message.style.color = "#ff4444";
+
+        return;
+
+      }
+
+      const payload = {
+
+        data: [{
+
+          email: email,
+
+          "ip address": userIP
+
+        }]
+
+      };
+
+      fetch("https://sheetdb.io/api/v1/potjyyl8cuyux", {
+
+        method: "POST",
+
+        headers: { "Content-Type": "application/json" },
+
+        body: JSON.stringify(payload)
+
+      })
+
+      .then(res => {
+
+        if (res.ok) {
+
+          message.textContent = "✅ Email submitted successfully!";
+
+          message.style.color = "#44ff88";
+
+          emailInput.value = "";
+
+        } else {
+
+          throw new Error("Submission failed");
+
+        }
+
+      })
+
+      .catch(() => {
+
+        message.textContent = "❌ Submission failed. Try again.";
+
+        message.style.color = "#ff4444";
+
+      });
+
+    });
+
+  </script>
+
+</body>
+
+</html>
+<!-- partial -->
+  
 </body>
 </html>
